background not showing bugg fixing

--- a/style/style.css
+++ b/style/style.css
@@ -8,13 +8,15 @@
 
 .hero{
     height: 620px;
-    background-image: linear-gradient(0.00deg, rgb(16, 16, 16) -19.5%,rgba(16, 16, 16, 0) 100%), url(/assets/hero-bg.png);
+    background-image: url(/assets/hero-bg.png);
+    background-color: linear-gradient(0.00deg, rgb(16, 16, 16) -19.5%,rgba(16, 16, 16, 0) 100%);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-blend-mode: overlay;
 }
 
 .hero-content{
